# fraude-code

./: .gitignore  BACKEND_REQUIREMENTS.md  package-lock.json  package.json  running-local-model.md  tsconfig.build.json  tsconfig.json  tsconfig.test.json
backend/: app.py  harmony_server.py  mcp_server.py  planning.py  pyproject.toml  test_app.py  test_harmony_server.py  test_mcp_server.py
mockup/: Fraude Code.dc.html
src/: app.tsx  backend.ts  cli.tsx  prompt.tsx  types.ts
test/: app.test.tsx  backend.test.ts  prompt.test.tsx
