[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.0",
    "httpx>=0.28.1",
    "jsonschema>=4.26.0",
    "mcp>=1.28.0",
    "uvicorn>=0.49.0",
]

[project.optional-dependencies]
harmony = [
    "mlx-lm==0.31.3",
    "openai-harmony==0.0.8",
]
